add select2entity-bundle, BsMultiSelect

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -8,6 +8,8 @@ $custom-file-text: (
 
 @import "~bootstrap/scss/bootstrap";
 @import "~glyphicons-only-bootstrap/css/bootstrap.css";
+@import "~select2";
+@import "~select2-bootstrap4-theme";
 
 .custom-file-label {
     &::after {
