--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
             {% block javascripts %}
                 <script src="{{ asset('build/runtime.js') }}"></script>
                 <script src="{{ asset('build/app.js') }}"></script>
+                <script src="{{ asset('bundles/tetranzselect2entity/js/select2entity.js') }}"></script>
             {% endblock %}
         </div>
     </body>
