--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -6,7 +6,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {% if not is_granted("ROLE_USER")  %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -31,19 +31,29 @@
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                         >
+                            {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+                                <span class="glyphicon glyphicon-log-in mr-1"></span>
+                            {% endif %}
                             {{ app.user.username }}
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path('easyadmin') }}">
                                 {{ 'admin'|trans }}
                             </a>
                             <a class="dropdown-item" href="{{ path('fos_user_change_password') }}">
                                 {{ 'change_password'|trans }}
                             </a>
-                            <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">
-                                <span class="glyphicon glyphicon-log-out mr-1"></span>
-                                <span class="font-weight-bold">{{ 'logout'|trans }}</span>
-                            </a>
+                            {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+                                <a class="dropdown-item" href="{{ path('home', {'_switch_user': '_exit'}) }}">
+                                    <span class="glyphicon glyphicon-log-out mr-1"></span>
+                                    <span class="font-weight-bold">{{ 'logout_from_under'|trans }} {{ app.user.username }}</span>
+                                </a>
+                            {% else %}
+                                <a class="dropdown-item" href="{{ path('fos_user_security_logout') }}">
+                                    <span class="glyphicon glyphicon-log-out mr-1"></span>
+                                    <span class="font-weight-bold">{{ 'logout'|trans }}</span>
+                                </a>
+                            {% endif %}
                         </div>
                     </li>
                 </ul>
